<resources>
    <string name="about_version">Version</string>
    <string name="accepted_if_registered">Accepted </string>
    <string name="access_forum">Visit official forum</string>
    <string name="account_error">account error</string>
    <string name="add">Add</string>
    <string name="add_background">Add background</string>
    <string name="add_feedback_description">Thanks for supporting</string>
    <string name="add_follow">follow</string>
    <string name="add_media_add">+Add Media</string>
    <string name="add_to_group_success">has been added to %s</string>
    <string name="add_to_main_success">already add to songlist</string>
    <string name="added_songlist_to_favorite">Marked favorite.</string>
    <string name="adjust">adjust</string>
    <string name="adjust_lyric">adjust lyric</string>
    <string name="airplane_while_sleeping">Airplane while sleeping</string>
    <string name="ajust_audio">Attune</string>
    <string name="alarm_clock">Alarm clock</string>
    <string name="album_alias_text">Alias：%s</string>
    <string name="album_company_text">Company：%s</string>
    <string name="album_date_text">Date：%s</string>
    <string name="album_detail">Album detail</string>
    <string name="album_download_dialog_title">下载品质选择</string>
    <string name="album_download_select_activity_title">Batch download</string>
    <string name="album_genre_text">Genre：%s</string>
    <string name="album_introduce">Album introduce</string>
    <string name="album_lang">language: %s</string>
    <string name="album_lang_text">Lang：%s</string>
    <string name="album_message_hint">Album Message</string>
    <string name="album_message_intro">Message Intro</string>
    <string name="album_name_text">Name：%s</string>
    <string name="album_publish_time">publish time: %s</string>
    <string name="album_quality_compress_title">压缩品质</string>
    <string name="album_quality_high_title">优先下载高品质</string>
    <string name="album_quality_lossless_title">优先下载无损品质</string>
    <string name="album_quality_normal_title">标准品质</string>
    <string name="album_quality_super_title">优先下载超高品质</string>
    <string name="album_search_nodata">No Album</string>
    <string name="album_song_count">Songs (%d)</string>
    <string name="album_song_downloaded">Downloaded</string>
    <string name="album_type_text">Type：%s</string>
    <string name="alias">别    名</string>
    <string name="alike_title">Alike</string>
    <string name="all_network">All network</string>
    <string name="all_settings">All Settings</string>
    <string name="already_copy_to_clip_board">already copy</string>
    <string name="already_latest">Latest already</string>
    <string name="amethyst">Amethyst</string>
    <string name="answer_what_is_lock_desktop_lyric">After locking, desktop lyrics will not respond to click and drag.</string>
    <string name="answer_why_no_desktop_lyric">If you are MINI system, you should open the switch of suspension window in the system settings. \nMIUI V5 system: Settings &gt; Applications &gt; TTPOD &gt; display suspended window &gt; on \nMIUI V6 system: Settings &gt; Applications &gt; TTPOD &gt; Management Authority &gt; display suspension window &gt; On</string>
    <string name="app_name">天天动听</string>
    <string name="app_rate">Rate TTPod</string>
    <string name="application">Application</string>
    <string name="apply">Apply</string>
    <string name="apply_for_music_circle">Apply for music circle</string>
    <string name="appstore_dialog_message_update">更新内容:\n%1$s\n\n更新包大小:%2$s\n使用360手机助手省流量更新仅需要%3$s\n建议更新</string>
    <string name="appstore_dialog_message_update_patch">更新内容:\n%1$s\n\n更新包大小:%2$s\n使用360手机助手更新，享受极速下载体验</string>
    <string name="appstore_dialog_title_found_new_version">发现新版本 %1$s</string>
    <string name="appstore_notification_message_apk_download_fail">%s下载失败</string>
    <string name="appstore_notification_message_apk_download_ok">%s下载成功</string>
    <string name="appstore_notification_message_apk_downloading">正在下载%s</string>
    <string name="appstore_notification_message_found_new_version_patch">V%1$s，可省流量%2$s</string>
    <string name="appstore_notification_message_found_new_version_speed">V%1$s，大小：%2$s</string>
    <string name="appstore_notification_tickertext_apk_downloading">正在下载更新</string>
    <string name="appstore_notification_title_apk_download_fail">更新下载失败</string>
    <string name="appstore_notification_title_apk_download_ok">更新下载成功</string>
    <string name="appstore_notification_title_apk_downloading">更新中...</string>
    <string name="appstore_notification_title_found_new_version">%1$s有新版本了</string>
    <string name="appstore_title">360手机助手</string>
    <string name="appstore_update">直接更新</string>
    <string name="appstore_update_patch">省流量更新</string>
    <string name="appstore_update_speed">高速更新</string>
    <string name="aquarius">Aquarius</string>
    <string name="area">Area</string>
    <string name="aries">Aries</string>
    <string name="artist">artist</string>
    <string name="artwork">Picture</string>
    <string name="ask_what_is_lock_desktop_lyric">What is the mean of lock desktop lyrics?</string>
    <string name="ask_why_no_desktop_lyric">Why not show the desktop lyrics?</string>
    <string name="audience_count">%d人观看</string>
    <string name="audio_effect">Audio Effect</string>
    <string name="audio_match_tip">Intelligent matching, make each song and best sound accidentaly across.</string>
    <string name="audio_plus">Audio+</string>
    <string name="audition_2g_quality">Audition quality in 2G</string>
    <string name="audition_wifi_quality">Audition quality in wifi</string>
    <string name="audution_3g_quality">Audition quality in 3G</string>
    <string name="auth_failed">authorized failure</string>
    <string name="auth_failure_tip">UserName or password is not match,please check again!</string>
    <string name="auth_success">authorized success</string>
    <string name="author">Author</string>
    <string name="auto_download_network_type_all">Auto download favorite songs on all network</string>
    <string name="auto_download_network_type_wifi">Auto download favorite songs only on WIFI</string>
    <string name="auto_save_failure">Full storage, auto-save failed</string>
    <string name="auto_save_when_listen">Auto Save When Listen</string>
    <string name="auto_subtitle">compressed audio in 2G/3G network, normal in wifi.</string>
    <string name="auto_title">Auto selection</string>
    <string name="awards">获奖记录</string>
    <string name="background">Background</string>
    <string name="background_follow_theme">Follow theme.</string>
    <string name="backlight_landscape">Back light on landscape</string>
    <string name="backlight_list">Back light on list</string>
    <string name="backlight_lockscreen">Back light on lockscreen</string>
    <string name="backlight_player">Back light on player</string>
    <string name="base_setting">Base setting</string>
    <string name="be_searching">searching......</string>
    <string name="beautiful_background">Background</string>
    <string name="beauy_start">立即启动</string>
    <string name="begin_register">Registering, please wait...</string>
    <string name="best_album">Best Album</string>
    <string name="big">Big</string>
    <string name="birth_place">出生地</string>
    <string name="birthday">Birthday</string>
    <string name="black">Black</string>
    <string name="blood_type">血    型</string>
    <string name="blue">Blue</string>
    <string name="bluetooth_unsupport">no bluetooth device found in your phone.</string>
    <string name="boost_effect">Boost</string>
    <string name="buffering_started">Buffering</string>
    <string name="business_mail">market@ttpod.com</string>
    <string name="business_mail_title">Business mail</string>
    <string name="buyprompt">服务由中国移动提供，购买彩铃的费用将从您的话费中扣除</string>
    <string name="cache_clean">Clean cache</string>
    <string name="cache_has_been_cleaned">cache has been cleaned</string>
    <string name="cache_size_calculating">cache size is calculating, please wait...</string>
    <string name="cailing">彩铃</string>
    <string name="cailingopenorder">彩铃功能费：</string>
    <string name="can_not_find_singer_information">Working on the artist info, coming soon</string>
    <string name="can_not_get_effect_no_play">Can\'t get effect when don\'t play song</string>
    <string name="can_not_save_effect_no_play">Can\'t save effect when don\'t play song</string>
    <string name="can_not_share">Sorry! Can\'t share due to lack of pic url.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_favorite">Cancel favorite</string>
    <string name="cancel_sleep_mode">cancel sleep mode</string>
    <string name="cancer">Cancer</string>
    <string name="cannot_play_for_network_error">Network Error</string>
    <string name="capricorn">Capricorn</string>
    <string name="captcha">Captcha</string>
    <string name="captcha_sent">Captcha message is sent to your mobile phone, please check it</string>
    <string name="cardisnotcmcc">请使用中国移动卡</string>
    <string name="career">职    业</string>
    <string name="category">Handpick</string>
    <string name="confirm">confirm</string>
    <string name="dingdan">购买彩铃</string>
    <string name="download_post">Download</string>
    <string name="effect_help_auto_match_content">Over 100 EQ presets by professional tuners and give the best smart match for each song.</string>
    <string name="effect_help_auto_match_title">● Smart Match</string>
    <string name="effect_help_boost_content">Enhance heavy bass to make sound more powerful.</string>
    <string name="effect_help_boost_title">● Bass Enhancement</string>
    <string name="effect_help_equalizer_content">Ten knobs covering bass and treble which alow perfect adjustments to the tones and sound field.</string>
    <string name="effect_help_equalizer_title">● Equalizer</string>
    <string name="effect_help_reverb_content">Simulate environment different sound field by applying filter, reflection, transposition and transition to the sound.</string>
    <string name="effect_help_reverb_title">ENV</string>
    <string name="effect_help_surrond_content">Create the sense of 3D space and make listeners feel like surrounded by sound from all direction.</string>
    <string name="effect_help_surrond_title">● Surround</string>
    <string name="favorite">Favorite</string>
    <string name="finish">Complete</string>
    <string name="icon_finger_down"></string>
    <string name="icon_finger_up"></string>
    <string name="icon_media_menu_download"></string>
    <string name="icon_media_menu_share"></string>
    <string name="icon_post_header_comments"></string>
    <string name="icon_post_header_download"></string>
    <string name="icon_post_header_favorite_no"></string>
    <string name="icon_post_header_share"></string>
    <string name="input_email_address">Please input email address</string>
    <string name="login_text">Login</string>
    <string name="mainland_region_code">中国大陆 +86</string>
    <string name="media_item_menu_download">Download</string>
    <string name="more_modify_hint">Personal page more settings</string>
    <string name="musiccircle_comment">Comment</string>
    <string name="next">Next</string>
    <string name="nickname_hint_text">Enter nickname</string>
    <string name="nickname_length_limit">In 30 characters or less, exclusive special characters</string>
    <string name="orderprice">价 格：</string>
    <string name="password_again">Password again</string>
    <string name="password_hint_text">password</string>
    <string name="phone_number">Phone Number</string>
    <string name="reset_password">Password</string>
    <string name="send_captcha_email_hint">Email will be sent to retrieve password</string>
    <string name="share">Share</string>
    <string name="shiyingtimeout">有效期：</string>
    <string name="songername">歌手名：</string>
    <string name="songname">歌曲名：</string>
</resources>