<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280.0dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/cmmusic_page_background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="6.0dip"
        android:background="#ff58aef3" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:maxLines="1"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingTop="10.0dip"
        android:text="@string/dingdan"
        android:textColor="#ff58aef3"
        android:textSize="20.0sp" />

    <LinearLayout
        android:layout_width="282.0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-1.0dip"
        android:background="@drawable/cmmusic_page_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2.0px"
            android:background="@color/linecolor" />

        <TextView
            android:id="@+id/text_songname_orderpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/songname"
            android:textColor="#ff1f2d34" />

        <TextView
            android:id="@+id/text_singername_orderpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/songername"
            android:textColor="#ff1f2d34" />

        <TextView
            android:id="@+id/text_price_orderpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/orderprice"
            android:textColor="#ff1f2d34" />

        <TextView
            android:id="@+id/text_invaliddate_orderpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/shiyingtimeout"
            android:textColor="#ff1f2d34" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginTop="10.0dip"
            android:paddingRight="16.0dip"
            android:text="@string/buyprompt"
            android:textColor="#ff1f2d34" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="51.0dip"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_orderpage"
            android:layout_width="141.0dip"
            android:layout_height="52.0dip"
            android:layout_gravity="center"
            android:background="@drawable/cmmusic_button_background"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/prompt_textcolor"
            android:textSize="16.0sp" />

        <Button
            android:id="@+id/btn_submit_orderpage"
            android:layout_width="141.0dip"
            android:layout_height="52.0dip"
            android:layout_gravity="center"
            android:background="@drawable/cmmusic_button_background"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/prompt_textcolor"
            android:textSize="16.0sp" />
    </LinearLayout>
</LinearLayout>