<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout_Register">

    <com.sds.android.ttpod.common.widget.ClearEditText
        android:id="@+id/email_address"
        style="@style/EditText_Register"
        android:hint="@string/input_email_address"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress" />

    <View style="@style/UserInfo_division_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginTop="14.0dip"
        android:text="@string/send_captcha_email_hint"
        android:textColor="#ffa5acb6"
        android:textSize="@dimen/register_tip_size" />

    <TextView
        android:id="@+id/next"
        style="@style/TextView_Next"
        android:layout_marginTop="37.0dip"
        android:text="@string/next" />
</LinearLayout>