<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout_Register">

    <com.sds.android.ttpod.common.widget.ClearEditText
        android:id="@+id/password"
        style="@style/EditText_Register"
        android:hint="@string/reset_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="#ffc2c7cd" />

    <View style="@style/UserInfo_division_line" />

    <com.sds.android.ttpod.common.widget.ClearEditText
        android:id="@+id/password_again"
        style="@style/EditText_Register"
        android:hint="@string/password_again"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="#ffc2cfe2" />

    <View style="@style/UserInfo_division_line" />

    <TextView
        android:id="@+id/finish"
        style="@style/TextView_Next"
        android:layout_marginTop="18.0dip"
        android:text="@string/next" />
</LinearLayout>